[gd_scene load_steps=13 format=2]

[ext_resource path="res://test/crane/Crane.tscn" type="PackedScene" id=1]
[ext_resource path="res://test/Level.gd" type="Script" id=2]
[ext_resource path="res://test/camera/OrbitalCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://test/ui/UI_debug.tscn" type="PackedScene" id=4]
[ext_resource path="res://test/plan/BuildingPlan.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=1]
rough = true

[sub_resource type="BoxShape" id=2]
extents = Vector3( 15, 1.2, 15 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 30, 2, 30 )

[sub_resource type="SphereMesh" id=4]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.0156863, 0.796078, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.756863, 0.427451, 0, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 100, 10, 100 )

[node name="Level" type="Spatial"]
script = ExtResource( 2 )

[node name="OrbitalCamera" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.73354, 0 )

[node name="Ground" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="Ground"]
collision_layer = 3
collision_mask = 0
physics_material_override = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.16191, 5.1161, 0 )
enabled = true
cast_to = Vector3( 0, -100, 0 )
collision_mask = 7

[node name="RayGround" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.16191, 5.1161, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="Debug" type="Spatial" parent="."]

[node name="Pointer" type="MeshInstance" parent="Debug"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63408, 0.900725, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Target" type="MeshInstance" parent="Debug"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63408, 0.900725, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="Construction" type="Spatial" parent="."]

[node name="Crane" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 14 )

[node name="Destroyer" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.05006, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Destroyer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -25, 0 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="BuildingPlan" parent="." instance=ExtResource( 5 )]

[connection signal="orbiting_end" from="OrbitalCamera" to="." method="_on_OrbitalCamera_orbiting_end"]
[connection signal="body_entered" from="Destroyer" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="check_clicked" from="UI" to="." method="_on_UI_check_clicked"]
[connection signal="area_created" from="BuildingPlan" to="." method="_on_BuildingPlan_area_created"]
[connection signal="objective_updated" from="BuildingPlan" to="." method="_on_BuildingPlan_objective_updated"]
